--- a/frontend/index/src/index.css
+++ b/frontend/index/src/index.css
@@ -37,8 +37,7 @@ code {
 
 .nav-bar {
   width: 80px;
-  height: 100vh;
-  position: absolute;
+  height: 100%;
   left: 0;
   display: flex;
   flex-direction: column;
@@ -46,8 +45,7 @@ code {
   align-items: center;  
   background-color: #fafafb;
   justify-content: flex-start;
-  overflow-y: auto;
-  position: absolute;
+  position:fixed;
 }
 
 .unilective-icon {
