--- a/frontend/index/src/index.css
+++ b/frontend/index/src/index.css
@@ -117,7 +117,7 @@ code {
   margin-right: auto;
   height: 2em;
   outline: 2px solid #9cade9;
-  border-radius: 2px
+  border-radius: 2px;
 }
 
 .search-bar input { 
@@ -144,30 +144,26 @@ form {
 }
 
 .sort-bar {
-
   border: 1px solid gray;
-  border-radius: 5px;
-
+  top:100%;
   margin-right: auto;
   margin-top: 10px;
   border-radius: 6px;
   margin-bottom: 20%;
   width: 200px;
-  z-index: 1;
-
+  z-index: 2;
+  background-color: white;
+  height:fit-content;
 }
 
 .sorting-dropdown {
-  height: 10px;
   margin-top: 15px;
   margin-bottom: 15px;
-  
   width: 100%;
   text-align: left;
   text-indent: 15px;
   font-size: 15px;
   color: gray;
-  
   background-image: url('chevron-down.svg');
   background-repeat: no-repeat;
   background-position: 90% center;
